--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,6 @@
 	<body>
 		<div class="main_container">
 			<div class="header_frame">
-				<div class="h_links">
 					<div class="home_link">
 						<%= link_to "EASYCOMPS.COM", root_path %>
 					</div>
@@ -21,13 +20,18 @@
 						<div class="user_link"><%= link_to "Sign Up!", new_user_path %></div>
 					<% else %>
 						<div class="user_link">
-						<%= link_to "My Profile/Avatar", user_path(@current_user) %>
-							<div class="user_menu_show">
-								<p>Hello World!</p>
-							</div>
+							<%= link_to "My Profile/Avatar", user_path(@current_user) %>
+								<div class="user_menu_show">
+								<ul>
+									<li><%= link_to "Edit Profile", edit_user_path(@current_user) %></li>
+									<li><%= link_to "Search", new_property_path %></li>
+									<li><%= link_to "Reports", reports_path %></li>
+									<li><%= link_to "Favorites", favorites_path %></li>
+									<li><%= link_to "Log Out", logout_path, method: :delete %></li>
+								</ul>
+								</div>
 						</div>
 					<% end %>
-				</div>
 			</div>
 			<div class="main_wrapper_frame">
 				<div class="main_wrapper">
