--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create account</h1>
 
-<%= form_for @user do |f| %>
+<%= form_for @new_user do |f| %>
 
   <% if flash[:errors] %>
     <%= flash[:errors] %>
