--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,6 +1,10 @@
 <h1>My Favorites</h1>
 
+<div class="fav_wrapper">
 <% @favorites.each do |fav| %>
- <%= link_to fav.property.street_address, fav.property %>
-
+	<h2><%="#{fav.created_at.strftime("%r %B %d, %Y")}" %></h2>
+	<p><%= link_to fav.property.street_address, fav.property %></p>
+	<hr>
+	<br>
+</div>
 <% end %>
