--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,5 @@
 <h1>Create account</h1>
 
-<%= form_for @user do |f| %>
+<%= render "user_form" %>
 
-  <% if flash[:errors] %>
-    <%= flash[:errors] %>
-  <% end %>
-
-  <p><%= f.label :user_name%></p>
-  <%= f.text_field :user_name%>
-
-  <p><%= f.label :email_address%></p>
-  <%= f.text_field :email_address%>
-
-  <p><%= f.label :password%></p>
-  <%= f.password_field :password%>
-
-  <p><%= f.submit 'Create account' %></p>
-<% end %>
+<%= link_to "Cancel", login_path, class: "link_cancel" %>
