--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,20 @@
 <% if @current_user == @user %>
-  <h1>Dashboard</h1>
-  <h2>Welcome <%= @user.user_name %></h2>
+    <h2>EasyComps Dashboard</h2>
+    <h3>Welcome, <%= @user.user_name %>!</h3>
 
 
- <p><%= link_to "New Property Search", new_property_path %></p>
-  <p><%= link_to "My Favorites", favorites_path %></p>
-  <p><%= link_to "My Reports", reports_path %></p>
-  <p><%= link_to "Delete account", @current_user, method: :delete %></p>
-  <p><%= link_to "Logout", logout_path, method: :delete %></p>
-<% else %>
-  <p>You are not aurhorized to see this page</p>
-  <p><%= link_to "Back to dashboard", @current_user %></p>
-<% end %>
+    <%= link_to "New Property Search", new_property_path %>
+    <br>
+    <%= link_to "My Favorites", favorites_path %>
+    <br>
+    <%= link_to "My Reports", reports_path %>
+    <br>
+    <br>
+    <%= link_to "Logout of your Account", logout_path, method: :delete, class: "link_delete" %>
+  <% else %>
+    You are not aurhorized to see this page
+    <br>
+    <%= link_to "Back to dashboard", @current_user %>
+  <% end %>
 
 
