--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -4,10 +4,11 @@
 	color: #000;
 	text-align: center;
 	text-decoration: none;
-	font-size: 0.75rem;
+	font-size: 1rem;
 	border-radius: 5px;
-	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
+	margin-left:0.25rem; margin-right:0.25rem; margin-top:0.25rem; margin-bottom:0.25rem;
 	padding-left:0.25rem; padding-right:0.25rem; padding-top:0.25rem; padding-bottom:0.25rem;
+
 	box-shadow: 0 0 2.5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
 	-moz-box-shadow: 0 0 2.5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
 	-webkit-box-shadow: 0 0 2.5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
@@ -20,10 +21,10 @@
 	background: radial-gradient(rgba(0, 173, 5, 1), rgba(0, 122, 4, 1));
 	text-align: center;
 	text-decoration: none;
-	font-size: 0.75rem;
-	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
-	padding-left:0.25rem; padding-right:0.25rem; padding-top:0.25rem; padding-bottom:0.25rem;
+	font-size: 1rem;
 	border-radius: 25px;
+	margin-left:0.25rem; margin-right:0.25rem; margin-top:0.25rem; margin-bottom:0.25rem;
+	padding-left:0.25rem; padding-right:0.25rem; padding-top:0.25rem; padding-bottom:0.25rem;
 
 	transition-property: cursor, color, background, box-shadow, border-radius;
 	transition-duration: .25s, .25s;
@@ -42,9 +43,9 @@
 	color: #000;
 	text-align: center;
 	text-decoration: none;
-	font-size: 0.75rem;
+	font-size: 1rem;
 	border-radius: 5px;
-	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
+	margin-left:0.25rem; margin-right:0.25rem; margin-top:0.25rem; margin-bottom:0.25rem;
 	padding-left:0.25rem; padding-right:0.25rem; padding-top:0.25rem; padding-bottom:0.25rem;
 
 	box-shadow: 0 0 2.5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
@@ -58,9 +59,9 @@
 	background: radial-gradient(rgba(191, 20, 0, 1), rgba(117, 12, 0, 1));
 	text-align: center;
 	text-decoration: none;
-	font-size: 0.75rem;
+	font-size: 1rem;
 	border-radius: 25px;
-	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
+	margin-left:0.25rem; margin-right:0.25rem; margin-top:0.25rem; margin-bottom:0.25rem;
 	padding-left:0.25rem; padding-right:0.25rem; padding-top:0.25rem; padding-bottom:0.25rem;
 
 	transition-property: color, background, border-radius;
@@ -80,9 +81,9 @@
 	color: #000;
 	text-align: center;
 	text-decoration: none;
-	font-size: 0.75rem;
+	font-size: 1rem;
 	border-radius: 5px;
-	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
+	margin-left:0.25rem; margin-right:0.25rem; margin-top:0.25rem; margin-bottom:0.25rem;
 	padding-left:0.25rem; padding-right:0.25rem; padding-top:0.25rem; padding-bottom:0.25rem;
 
 	box-shadow: 0 0 2.5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
@@ -96,10 +97,10 @@
 	background: radial-gradient(rgba(255, 242, 0, 1), rgba(230, 218, 0, 1));
 	text-align: center;
 	text-decoration: none;
-	font-size: 0.75rem;
-	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
-	padding-left:0.25rem; padding-right:0.25rem; padding-top:0.25rem; padding-bottom:0.25rem;
+	font-size: 1rem;
 	border-radius: 25px;
+	margin-left:0.25rem; margin-right:0.25rem; margin-top:0.25rem; margin-bottom:0.25rem;
+	padding-left:0.25rem; padding-right:0.25rem; padding-top:0.25rem; padding-bottom:0.25rem;
 
 	transition-property: color, background, border-radius;
 	transition-duration: .25s, .25s;
