--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -6,18 +6,4 @@
   <% end %>
 <% end %>
 
-<%= form_for @property do |f| %>
- 
-    <%= f.label :street_address, "Street Address:" %>
-    <%= f.text_field :street_address %>
-
-    <%= f.label :city %>
-    <%= f.text_field :city %> 
-
-    <%= f.label :state %>
-    <%= f.select :state, @states %>
-
-    <%= f.hidden_field :user_id, :value => @current_user.id %>
-
-    <%= f.submit "Search" %>
-<% end %>
+<%= render "property_form" %>
