--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,7 +40,7 @@ body {
 	min-width: 100%;
 	min-height: 100vh;
 	max-width: 100%;
-	z-index:-10;
+	z-index:0;
 	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
 	padding-left:0; padding-right:0; padding-top:0; padding-bottom:0;
 }
@@ -99,4 +99,37 @@ body {
 	font-family:roboto;
 	margin:10px 10px 10px 10px;
 	padding:10px 10px 10px 10px;
+}
+
+
+.list_item {
+	width: 100%;
+	z-index:0;
+}
+
+.list_header {
+	position:;
+	float:left;
+		padding-left:0rem;
+		padding-right:1rem;
+	padding-top:0.1rem;
+	padding-bottom:0.25rem;
+		width: 100%;
+
+	z-index:9;
+
+	color:#003261;
+	font-family:roboto;
+	font-size: 0.75rem;
+	font-weight: 750;
+	text-decoration:none;
+}
+
+.list_text {
+	/* position: */
+	display:flex;
+	padding-top:0.25rem;
+	padding-bottom:0.5rem;
+		width: 100%;
+	z-index:10;
 }
