--- a/app/assets/stylesheets/favorites.css
+++ b/app/assets/stylesheets/favorites.css
@@ -13,6 +13,7 @@
 }
 
 .fav_wrapper p {
+	width:25%;
 	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
 	padding-left:1rem; padding-right:0; padding-top:0; padding-bottom:0;
 }
