--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -13,6 +13,12 @@
 	padding-left:0; padding-right:0; padding-top:0; padding-bottom:0.5rem;
 }
 
+.report_wrapper h3 {
+	font-size: 0.75rem;
+	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
+	padding-left:0; padding-right:0; padding-top:0; padding-bottom:0.5rem;
+}
+
 .report_wrapper p {
 	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
 	padding-left:1rem; padding-right:0; padding-top:0; padding-bottom:0;
