--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -2,9 +2,14 @@
 
 <div class="fav_wrapper">
 <% @favorites.each do |fav| %>
-	<h2><%="#{fav.created_at.strftime("%r %B %d, %Y")}" %></h2>
-	<p><%= link_to fav.property.street_address, fav.property %></p>
+	<div class= "list_item">
+		<div class="list_header">
+				<%= "#{fav.created_at.strftime("%r %B %d, %Y")}" %>
+		</div>
+		<div class= "list_text">
+			<%= link_to fav.property.street_address, fav.property %>
+		</div>
+	</div>
 	<hr>
-	<br>
 <% end %>
 </div>
