--- a/app/views/comps/show.html.erb
+++ b/app/views/comps/show.html.erb
@@ -5,4 +5,5 @@
 <p> <%= @comp.bathrooms%> Bath</p>
 <p> <%= @comp.square_footage%> Square Feet</p>
 
-<%= link_to 'Back', @comp.property %>
+<%= link_to 'Back to Property Details', @comp.property %>
+<%= link_to 'Back to Dashboard', @current_user%>
