--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,3 +1,29 @@
+<style>
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+</style>
+
 <h1><%= @property.street_address.titleize %></h1>
 <h2><%= @property.city.titleize %>, <%= @property.state %> <%= @property.zipcode %></h2>
 <img src=<%= @property.main_image %> alt="main image">
@@ -5,19 +31,33 @@
 <p> <%= @property.bathrooms%> Bath</p>
 <p> <%= @property.square_footage%> Square Feet</p>
 
+<% if @property.user.reports.where(property_id: @property.id ).empty? %>
+
 <%= form_for @report do |f| %>
 <%= f.hidden_field :property_id, :value => @property.id %>
 <%= f.hidden_field :user_id, :value => @property.user_id %>
 <%= f.submit 'Generate Report' %>
 <% end %>
 
+<% elsif @property.comps.empty? %>
+<div class="tooltip">Report not available for this property.
+  <span class="tooltiptext">Some information is protected by Zillow at the request of the homeowner. It could be that comps are not available for this home, or that the information access has been restricted by law.</span>
+</div>
+
+<% else %>
+<%= link_to 'View Report', @property.user.reports.where(property_id: @property.id, user_id: @property.user_id ).first%>
+<%end %>
+
+<% if @property.user.favorites.where(property_id: @property.id ).empty? %>
+
 <%= form_for @favorite do |f| %>
 <%= f.hidden_field :property_id, :value => @property.id %>
-<%= f.hidden_field :user_id, :value => @property.user_id %>
+<%= f.hidden_field :user_id, :value => @current_user.id %>
 <%= f.submit 'Add To Favorites' %>
-
 <% end %>
 
-<% if flash[:success] %>
-    <%= flash[:success] %>
-<% end %>
+<% else %>
+<%= '⭐ Favorited' %>
+<%end %>
+
+<%= link_to 'Back to Dashboard', @property.user %>
