--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -7,6 +7,10 @@
 
 }
 
+.report_img {
+	float:left;
+}
+
 .report_wrapper h2 {
 	font-size: 1rem;
 	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
