--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -11,12 +11,14 @@
 <%= f.submit 'Generate Report' %>
 <% end %>
 
-<%= form_for @favorite do |f| %>
-<%= f.hidden_field :property_id, :value => @property.id %>
-<%= f.hidden_field :user_id, :value => @property.user_id %>
-<%= f.submit 'Add To Favorites' %>
+    <% if @current_user.id != @property.user_id%>
+    <%= form_for @favorite do |f| %>
+    <%= f.hidden_field :property_id, :value => @property.id %>
+    <%= f.hidden_field :user_id, :value => @property.user_id %>
+    <%= f.submit 'Add To Favorites' %>
+    <% end %>
+    <% end %>
 
-<% end %>
 
 <% if flash[:success] %>
     <%= flash[:success] %>
