--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -19,6 +19,8 @@
     <% end %>
     <% end %>
 
+  <%= link_to "Remove from favorites", favorite_path, method: :delete, class: "link_delete" %>
+
 
 <% if flash[:success] %>
     <%= flash[:success] %>
