--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user, html: { class: "form" } do |f| %>
+<%= form_for @new_user, html: { class: "form" } do |f| %>
 
 	<% if flash[:errors] %>
 		<%= flash[:errors] %>
