--- a/app/views/shared/_heading.erb
+++ b/app/views/shared/_heading.erb
@@ -1,1 +1,1 @@
-<h1 class="heading"><%= local_assigns[:title] || "Reverse Yelp" %></h1>
+<h1 class="heading"><%= local_assigns[:title] || "EasyComps.com" %></h1>
