--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -2,7 +2,7 @@
 <img src=<%= @report.property.main_image %> alt="main image">
 <div>
 <h4>Home Size</h4>
-<p>This home is <%= number_to_percentage(@report.size_comparison.abs * 100, precision: 2) %> <%= @report.smaller_or_larger %> than comparable homes</p>
+<p>This home is <%= number_to_percentage(@report.size_comparison.to_f.abs * 100, precision: 2) %> <%= @report.smaller_or_larger %> than comparable homes</p>
 <p>Average home size: <%= @report.avg_size.round(1) %> sqare feet</p>
 <p>This home: <%= @report.property.square_footage %> square feet</p>
 </div>
