--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,3 @@
-<h1>Create account</h1>
+<%= render "shared/heading", title: "Create New Account" %>
 
 <%= render "user_form" %>
-
-<%= link_to "Cancel", login_path, class: "link_cancel" %>
