--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -90,7 +90,13 @@ body {
 .main_wrapper a:hover, a:active {
 	color: #000;
 	text-decoration: none;
-	text-shadow: 0px 0px 2px rgb(0, 0, 0, 1);
+	padding-left: 0.5rem; padding-right: 2rem;
+	text-shadow: 0px 0px 1px rgb(0, 0, 0, 1);
+	transition-property: text-shadow, padding-left;
+	transition-duration: .1s, .1s;
+	transition-timing-function: ease-in-out;
+	-webkit-transition-timing-function:ease-in-out;
+	-moz-transition-timing-function:ease-in-out;
 }
 
 .wrapper_buttons {
@@ -154,4 +160,42 @@ body {
 	padding-bottom:0.5rem;
 
 	z-index:10;
+}
+
+.main_wrapper .button_back {
+	border: none;
+  	background-image: radial-gradient(rgb(250, 250, 250, 1),  rgb(225, 225, 225, 1) );
+	color: #000;
+	text-align: center;
+	text-decoration: none;
+	font-size: 1rem;
+	border-radius: 5px;
+	margin-left:0.25rem; margin-right:0.25rem; margin-top:0.25rem; margin-bottom:0.25rem;
+	padding-left:0.25rem; padding-right:0.25rem; padding-top:0.25rem; padding-bottom:0.25rem;
+
+	box-shadow: 0 0 2.5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
+	-moz-box-shadow: 0 0 2.5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
+	-webkit-box-shadow: 0 0 2.5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
+}
+
+.main_wrapper .button_back:hover, .main_wrapper .button_back:active {
+	border: none;
+	color: #fff;
+	background: radial-gradient(rgba(191, 20, 0, 1), rgba(117, 12, 0, 1));
+	text-align: center;
+	text-decoration: none;
+	font-size: 1rem;
+	border-radius: 25px;
+	margin-left:0.25rem; margin-right:0.25rem; margin-top:0.25rem; margin-bottom:0.25rem;
+	padding-left:0.25rem; padding-right:0.25rem; padding-top:0.25rem; padding-bottom:0.25rem;
+
+	transition-property: color, background, border-radius;
+	transition-duration: .25s, .25s;
+	transition-timing-function: ease-in-out;
+	-webkit-transition-timing-function:ease-in-out;
+	-moz-transition-timing-function:ease-in-out;
+
+	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
+	-moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
+	-webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
 }
