--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -14,4 +14,4 @@
 <% end %>
 </div>
 
-<%= link_to 'Back to Dashboard', @current_user, class: "link_delete"%>
+<%= link_to 'Back to Dashboard', @current_user, class: "button_back"%>
