--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 						<%= link_to "EASYCOMPS.COM", root_path %>
 					</div>
 					<%if @current_user == nil %>
-						<div class="user_link"><%= link_to "Sign Up!", new_user_path %></div>
+						<div class="user_link"><%= link_to "Login", login_path %><%= link_to "Sign Up!", new_user_path %></div>
 					<% else %>
 						<div class="user_link">
 							<%= link_to "Logged in as: #{@current_user.user_name}", user_path(@current_user) %>
