--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -13,5 +13,7 @@
 	<%= f.label :password%>
 	<%= f.password_field :password%>
 	<br>
-	<%= f.submit 'Create account', class: "link_create" %>
+	<br>
+	<%= f.submit 'Create account', class: "button_create" %>
+	<%= link_to "Cancel", login_path, class: "button_cancel" %>
 <% end %>
