--- a/app/assets/stylesheets/reports.css
+++ b/app/assets/stylesheets/reports.css
@@ -1,39 +1,115 @@
+.report_heading_wrapper {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.report_heading_heading {
+	align-self: center;
+}
+
+.report_heading_buttons {
+	align-self: center;
+}
+
 .report_wrapper {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-evenly;
+}
+
+.report_show_wrapper {
+}
+
+.report_show_top_wrapper {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-evenly;
+}
+.report_show_bottom_wrapper {
+	display:block;
+	width:100%;
+}
+
+.report_show_bottom_wrapper h4 {
+	color: #003261;
+	font-size: 1.5rem;
+	margin-left:0rem; margin-right:0; margin-top:0; margin-bottom:0;
+	padding-left:0rem; padding-right:0; padding-top:0; padding-bottom:0rem;
+}
+
+.report_show_bottom_wrapper p {
+	font-size: 1rem;
+	margin-left:0.5rem; margin-right:0; margin-top:0; margin-bottom:0;
+	padding-left:0.5rem; padding-right:0; padding-top:0; padding-bottom:0rem;
+}
+
+.report_show_img {
+	max-width:100%;
+	flex-shrink: 1;
+	flex-basis: auto;
+	align-self:flex-start ;
+}
+
+.report_show_info {
+	max-width:100%;
+	min-width:25%;
+	flex-shrink: 1;
+	flex-basis: auto;
+}
+
+.report_show_info h1 {
+	font-size:3rem;
+	margin-left:0.5rem; margin-right:0; margin-top:0; margin-bottom:0;
+	padding-left:0.5rem; padding-right:0; padding-top:0; padding-bottom:0rem;
+}
+
+.report_show_info h1 a, .report_show_info h1 a:link, .report_show_info h1 a:visited {
+	font-size:3rem;
+	margin-left:0rem; margin-right:0; margin-top:0; margin-bottom:0;
+	padding-left:0rem; padding-right:0; padding-top:0; padding-bottom:0rem;
+}
+
+.report_show_info a:hover, .report_show_info a:active {
+	font-size:3rem;
+	margin-left:0rem; margin-right:0; margin-top:0; margin-bottom:0;
+	padding-left:0rem; padding-right:0; padding-top:0; padding-bottom:0rem;
+}
+
+.report_show_info h2 {
+	font-size:1.5rem;
+	margin-left:0.5rem; margin-right:0; margin-top:0; margin-bottom:0;
+	padding-left:0.5rem; padding-right:0; padding-top:0; padding-bottom:1rem;
+}
+
+.report_show_top_wrapper h3 {
+	font-size: 0.75rem;
+	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
+	padding-left:0; padding-right:0; padding-top:0; padding-bottom:0.5rem;
+}
+
+.report_show_top_wrapper p {
+	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
+	padding-left:1rem; padding-right:0; padding-top:0; padding-bottom:0;
+}
+
+.report_sections {
+	/* display: flex;
+	flex-direction: column;
 	flex-wrap: wrap;
-	 justify-content:
-	/* width: 75%; */
+	justify-content: space-evenly; */
+	padding-top: 2rem; padding-bottom: 10rem;
+}
+
+.report_section_items {
+	/* display:flex;
+	order: 3; */
 }
 
 .report_list_wrapper {
 
-}
-
-
-.report_wrapper_buttons {
-/* flex-shrink: 1; */
-order: 2;
-}
-.report_img {
-  width: auto;
-  height: auto;
-flex-shrink: 1;
-flex-basis: auto;
-order: 1; 
-	/* position: relative; */
-	/* width: 75%; */
-	/* height: 75%;
-	min-width: 25%;
-	min-height: 25%; */
-	/* margin-left:1; margin-right:0; margin-top:0; margin-bottom:0; */
-	/* padding-left:1; padding-right:0; padding-top:0; padding-bottom:0.5rem; */
-}
-
-.report_info {
-min-width: 50%;
-flex-shrink: 1;
-order: 1;
 }
 
 .report_info h1 {
@@ -48,6 +124,7 @@ order: 1;
 	padding-left:0.5rem; padding-right:0; padding-top:0; padding-bottom:1rem;
 }
 
+
 .report_wrapper h3 {
 	font-size: 0.75rem;
 	margin-left:0; margin-right:0; margin-top:0; margin-bottom:0;
@@ -59,8 +136,7 @@ order: 1;
 	padding-left:1rem; padding-right:0; padding-top:0; padding-bottom:0;
 }
 
-
-.report_wrapper .button_create {
+.report_heading_buttons .button_create {
 	border: none;
   	background-image: radial-gradient(rgb(250, 250, 250, 1),  rgb(225, 225, 225, 1) );
 	color: #000;
@@ -77,7 +153,7 @@ order: 1;
 
 }
 
-.report_wrapper .button_create:hover, .report_wrapper .button_create:active {
+.report_heading_buttons .button_create:hover, .report_heading_buttons .button_create:active {
 	border: none;
 	color: #fff;
 	background: radial-gradient(rgba(0, 173, 5, 1), rgba(0, 122, 4, 1));
@@ -99,8 +175,7 @@ order: 1;
 
 }
 
-
-.report_wrapper .button_delete {
+.report_heading_buttons .button_delete {
 	border: none;
   	background-image: radial-gradient(rgb(250, 250, 250, 1),  rgb(225, 225, 225, 1) );
 	color: #000;
@@ -116,7 +191,7 @@ order: 1;
 	-webkit-box-shadow: 0 0 2.5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
 }
 
-.report_wrapper .button_delete:hover, .report_wrapper .button_delete:active {
+.report_heading_buttons .button_delete:hover, .report_heading_buttons .button_delete:active {
 	border: none;
 	color: #000;
 	background: radial-gradient(rgba(255, 242, 0, 1), rgba(230, 218, 0, 1));
@@ -138,7 +213,7 @@ order: 1;
 	-webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
 }
 
-.report_wrapper .button_cancel {
+.report_heading_buttons .button_cancel {
 	border: none;
   	background-image: radial-gradient(rgb(250, 250, 250, 1),  rgb(225, 225, 225, 1) );
 	color: #000;
@@ -154,7 +229,7 @@ order: 1;
 	-webkit-box-shadow: 0 0 2.5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25), 0 0 5px 0 rgba(0, 0, 0, 0.25);
 }
 
-.report_wrapper .button_cancel:hover, .report_wrapper .button_cancel:active {
+.report_heading_buttons .button_cancel:hover, .report_heading_buttons .button_cancel:active {
 	border: none;
 	color: #fff;
 	background: radial-gradient(rgba(191, 20, 0, 1), rgba(117, 12, 0, 1));
