--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,4 +1,12 @@
-<%= render "shared/heading", title: "My Reports" %>
+<div class="report_heading_wrapper">
+	<div class="report_heading_title">
+		<%= render "shared/heading", title: "My Reports" %>
+	</div>
+
+	<div class="report_heading_buttons">
+		<%= link_to 'Back to Dashboard', @current_user, class: "button_back"%>
+	</div>
+</div>
 <hr>
 <div class="report_list_wrapper">
 <% @reports.each_with_index do |rep, i| %>
@@ -13,5 +21,3 @@
 		<hr>
 <% end %>
 </div>
-
-<%= link_to 'Back to Dashboard', @current_user, class: "button_back"%>
