--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
 		<title>
 			Easy Comps
 		</title>
+		<%# <link rel="icon" type="image/png" href="../../assets/images/favicon.ico"> %>
+		<%= favicon_link_tag 'favicon.ico' %>
 		<%= csrf_meta_tags %>
 		<%= csp_meta_tag %>
 		<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
