--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
-<%= render "shared/heading", title: "Create New Account" %>
+<center>
+<h1> Create New Account </h1>
 
 <%= render "user_form" %>
+</center>
